fixes for linux build
Change-Id: Idf8c8684e7583f120afdebcd3073f72f7a96964f
CI-Depends: Idf8c8684e7583f120afdebcd3073f72f7a96964f

--- a/lib/GenXIntrinsics/CMakeLists.txt
+++ b/lib/GenXIntrinsics/CMakeLists.txt
@@ -6,6 +6,9 @@ add_llvm_library(LLVMGenXIntrinsics
   ADDITIONAL_HEADER_DIRS
   ${LLVM_MAIN_INCLUDE_DIR}/llvm/GenXIntrinsics
 
+  LINK_LIBS
+    LLVMCodeGen
+
   DEPENDS
     GenXIntrinsicsGen
     intrinsics_gen
