VMIT-6933: removed IntrinsicsGenX.td, use python descriptions to generate intrinsic instead of tablegen
As part of transition to IGC it was decided to replace intrinsic
generation process to that of IGC. In my opinion tablegen-based
solution is better, but this step is necessary in order to perform the merge

Change-Id: Ic6e3daca9a5fe3f6a3562373c47137a98c445e6b
CI-Depends: Ic6e3daca9a5fe3f6a3562373c47137a98c445e6b

--- a/include/llvm/GenXIntrinsics/CMakeLists.txt
+++ b/include/llvm/GenXIntrinsics/CMakeLists.txt
@@ -1,4 +1,18 @@
-set(LLVM_TARGET_DEFINITIONS ${LLVM_MAIN_INCLUDE_DIR}/llvm/IR/Intrinsics.td)
-tablegen(GenX GenXIntrinsicEnum.inc -gen-intrinsic-enums)
-tablegen(GenX GenXIntrinsicImpl.inc -gen-intrinsic-impl)
-add_public_tablegen_target(GenXIntrinsicsGen)
+set(_genx_intrinsic_description "GenXIntrinsicDesctiption.gen")
+add_custom_command(
+    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${_genx_intrinsic_description}
+    COMMAND ${PYTHON_EXECUTABLE} -B
+            ${CMAKE_CURRENT_SOURCE_DIR}/Intrinsics.py
+            ${CMAKE_CURRENT_SOURCE_DIR}/Intrinsic_definitions.py
+            ${CMAKE_CURRENT_BINARY_DIR}/${_genx_intrinsic_description}
+    DEPENDS
+         ${CMAKE_CURRENT_SOURCE_DIR}/Intrinsics.py
+         ${CMAKE_CURRENT_SOURCE_DIR}/Intrinsic_definitions.py
+    COMMENT "Building ${_genx_intrinsic_description}..."
+)
+
+add_custom_target(GenXIntrinsicDescriptionGen
+    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${_genx_intrinsic_description}
+)
+add_custom_target(GenXIntrinsicsGen)
+add_dependencies(GenXIntrinsicsGen GenXIntrinsicDescriptionGen)
