[Build] Prepare in-tree build of intrinsics as llvm project
This commit moves everything to GenXIntrinsics subdirectory
and adds needed CMakeLists.txt to support building when
project is located inside llvm/projects and built together.
Only library build is affected, no support for docs build.

Change-Id: I2810e6e9d456ce9543bc1e32cddffcd5641f4750

--- a/GenXIntrinsics/unittests/GenXIntrinsics/CMakeLists.txt
+++ b/GenXIntrinsics/unittests/GenXIntrinsics/CMakeLists.txt
@@ -5,7 +5,7 @@ set(LLVM_LINK_COMPONENTS
   GenXIntrinsics
   )
 
-add_llvm_unittest(GenXIntrinsicsTests
+add_genx_intrinsics_unittest(GenXIntrinsicsTests
   GenXIntrinsicsTest.cpp
   )
 
