[Build] Support build with prebuilt LLVM and installing of files.
Number of problems encountered and unresolved:
1) LLVM-Config.cmake is broken (fixed by e73177ea5fd6 in upstream llvm)
so there is no possibility to use prebuilt LLVM without any targets.
2) googletest is not installed with LLVM so unittests are disabled
in external build.
3) Build with python3 is currently seems to be broken.

Change-Id: If39fd47ca0c55db3b33b7f0ad9822f31d70df08d

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,35 @@ cmake_minimum_required(VERSION 3.3)
 
 set(LLVM_GENX_INTRINSICS_VERSION 1.0)
 
+# check if we build inside llvm or not
+if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
+  set(BUILD_EXTERNAL YES)
+  project(LLVM_GenXIntrinsics
+    VERSION
+      ${LLVM_GENX_INTRINSICS_VERSION}
+    LANGUAGES
+      CXX
+  )
+
+  set(CMAKE_CXX_STANDARD 11)
+  set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+  find_package(LLVM 8.0.0 REQUIRED)
+  set(CMAKE_MODULE_PATH
+    ${CMAKE_MODULE_PATH}
+    ${LLVM_CMAKE_DIR}
+  )
+  include(AddLLVM)
+  include(HandleLLVMOptions)
+
+  include_directories("${LLVM_INCLUDE_DIR}")
+  link_directories("${LLVM_LIBRARY_DIR}")
+
+  message(STATUS "Found LLVM: ${LLVM_VERSION}")
+else(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
+  set(BUILD_EXTERNAL NO)
+endif(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
+
 if( NOT PYTHON_EXECUTABLE )
   include(FindPythonInterp)
   if( NOT PYTHONINTERP_FOUND )
@@ -11,7 +40,7 @@ if( NOT PYTHON_EXECUTABLE )
   Please install Python or specify the PYTHON_EXECUTABLE CMake variable.")
   endif()
 
-  if( ${PYTHON_VERSION_STRING} VERSION_LESS 2.7 )
+  if( "${PYTHON_VERSION_STRING}" VERSION_LESS 2.7 )
     message(FATAL_ERROR "Python 2.7 or newer is required")
   endif()
 endif()
