[Build] Fix error under linux regarding to unknown .c extension in configuration phase
Change-Id: I134961e0a2a506a0d5f5abe4bd016ff7c7c57028

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
     VERSION
       ${LLVM_GENX_INTRINSICS_VERSION}
     LANGUAGES
-      CXX
+      C CXX
   )
 
   set(CMAKE_CXX_STANDARD 11)
