GenXIntrinsics build system changes to enable install exports
Change-Id: Id5928cc51b88fc8fa64d6ea277f2d5ab5b295df4
CI-Depends: I338fcbb1dfc72de5d85bd06c7c2121e9be55fb74
CI-Depends: Id5928cc51b88fc8fa64d6ea277f2d5ab5b295df4
CI-Depends: Ice0515c8b110a3f8f551b2e0fdb0ba1acf3cdbe5
CI-Depends: Ia44f2047b7a78f912c2e63ff6cbaf9d4ff4b2f5a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,5 +49,14 @@ if( __INTEL_EMBARGO__ )
   add_definitions(-D__INTEL_EMBARGO__)
 endif()
 
+if(NOT IGNORE_VC_INTRINSICS)
 add_subdirectory(GenXIntrinsics)
+else()
+message("Ignoring intrinsics")
+endif()
+
+if(NOT IGNORE_SPIRV_TRANSLATOR)
 add_subdirectory(SPIRV-LLVM-Translator)
+else()
+message("Ignoring SPIRV-Translator")
+endif()
