Adding relative paths support to standalone builds
Change-Id: Ic556a161fbc302b1036eb88690ec01041f99975b
CI-Depends: I1a599fb06aeff9e6608b64dc0b9fcaf94279b5ff
CI-Depends: I3855e5199a532d02c41e96d9cb21cba9eda25f8a
CI-Depends: Ic556a161fbc302b1036eb88690ec01041f99975b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ set(LLVM_GENX_INTRINSICS_VERSION 1.0)
 
 # check if we build inside llvm or not
 if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
+  get_filename_component(LLVM_CMAKE_PATH ${LLVM_DIR} ABSOLUTE BASE_DIR ${CMAKE_BINARY_DIR})
   set(BUILD_EXTERNAL YES)
   project(LLVM_GenXIntrinsics
     VERSION
@@ -15,7 +16,7 @@ if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
   set(CMAKE_CXX_STANDARD 11)
   set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-  find_package(LLVM 8.0.0 REQUIRED)
+  find_package(LLVM 8.0.0 REQUIRED HINTS "${LLVM_CMAKE_PATH}")
   set(CMAKE_MODULE_PATH
     ${CMAKE_MODULE_PATH}
     ${LLVM_CMAKE_DIR}
