--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,10 @@ if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
   message(STATUS "Found LLVM: ${LLVM_VERSION}")
 else(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
   set(BUILD_EXTERNAL NO)
+
+  # we require include_directories because we have dependency in SPIRV from intrinisics
+  include_directories(${CMAKE_CURRENT_SOURCE_DIR}/GenXIntrinsics/include)
+  include_directories(${CMAKE_CURRENT_BINARY_DIR}/GenXIntrinsics/include)
 endif(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
 
 include(FindPythonInterp)
