--- a/SPIRV-LLVM-Translator/lib/SPIRV/CMakeLists.txt
+++ b/SPIRV-LLVM-Translator/lib/SPIRV/CMakeLists.txt
@@ -1,5 +1,12 @@
+# __INTEL_EMBARGO_BEGIN__
+#   CMUtil.cpp
+#   CMUtil.h
+# __INTEL_EMBARGO_END__
+
 add_llvm_library(LLVMSPIRVLib
+#__INTEL_EMBARGO_BEGIN__
   CMUtil.cpp
+#__INTEL_EMBARGO_END__
   LLVMToSPIRVDbgTran.cpp
   Mangler/FunctionDescriptor.cpp
   Mangler/Mangler.cpp
