Adding export part of SPIRV-Translator (temporary solution for source-level merge)
Change-Id: If2273d186a9c663fb49a4861fa1d76664b3cf70d
CI-Depends: If2273d186a9c663fb49a4861fa1d76664b3cf70d

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ Please install Python or specify the PYTHON_EXECUTABLE CMake variable.")
 endif()
 
 if( "${PYTHON_VERSION_STRING}" VERSION_LESS 2.7 )
-message(FATAL_ERROR "Python 2.7 or newer is required")
+  message(FATAL_ERROR "Python 2.7 or newer is required")
 endif()
 
 set(__INTEL_EMBARGO__ ON CACHE BOOL "Build with IP sensitive code")
@@ -55,13 +55,18 @@ if( __INTEL_EMBARGO__ )
 endif(__INTEL_EMBARGO__)
 
 if(NOT IGNORE_VC_INTRINSICS)
-add_subdirectory(GenXIntrinsics)
+  add_subdirectory(GenXIntrinsics)
 else()
-message("Ignoring intrinsics")
+  message("Ignoring intrinsics")
 endif()
 
 if(NOT IGNORE_SPIRV_TRANSLATOR)
-add_subdirectory(SPIRV-LLVM-Translator)
+  if(BUILD_SPIRV_TRANSLATOR_V7)
+    add_subdirectory(SPIRV-LLVM-Translator-v7)
+  else()
+    add_subdirectory(SPIRV-LLVM-Translator)
+  endif()
 else()
-message("Ignoring SPIRV-Translator")
+  message("Ignoring SPIRV-Translator")
 endif()
+
