Fixing typo -- inverse logic
Change-Id: I7d9f48db3cfcd3321c5f2880ae79911f5305ebb5

--- a/GenXIntrinsics/CMakeLists.txt
+++ b/GenXIntrinsics/CMakeLists.txt
@@ -17,7 +17,8 @@ if(NOT BUILD_EXTERNAL)
   add_subdirectory(unittests)
 endif()
 
-if(NOT INSTALL_REQUIRED)
+# this option is to switch on install when we are building not inside IGC
+if(INSTALL_REQUIRED)
   install(DIRECTORY include/llvm
     DESTINATION include
     COMPONENT genx-intrinsics-headers
