Renamed CMSimdCFLowering, added wrappers for specific llvm version
Change-Id: Ia6aeafb5d4032b7934f0cbb5ed30abf975343803

--- a/GenXIntrinsics/lib/GenXIntrinsics/CMakeLists.txt
+++ b/GenXIntrinsics/lib/GenXIntrinsics/CMakeLists.txt
@@ -1,5 +1,14 @@
+# __INTEL_EMBARGO_BEGIN__
+#   GenXSimdCFLowering.cpp
+# __INTEL_EMBARGO_END__
+
 if(BUILD_EXTERNAL)
-  add_library(LLVMGenXIntrinsics GenXIntrinsics.cpp)
+  add_library(LLVMGenXIntrinsics 
+              GenXIntrinsics.cpp
+#__INTEL_EMBARGO_BEGIN__
+              GenXSimdCFLowering.cpp
+#__INTEL_EMBARGO_END__
+             )
   llvm_update_compile_flags(LLVMGenXIntrinsics)
   add_dependencies(LLVMGenXIntrinsics GenXIntrinsicsGen)
   add_dependencies(LLVMGenXIntrinsics LLVMCodeGen)
@@ -15,7 +24,9 @@ else()
 
   add_llvm_library(LLVMGenXIntrinsics
     GenXIntrinsics.cpp
-
+#__INTEL_EMBARGO_BEGIN__
+    GenXSimdCFLowering.cpp
+#__INTEL_EMBARGO_END__
     ADDITIONAL_HEADER_DIRS
     ${GENX_INTRINSICS_MAIN_INCLUDE_DIR}/llvm/GenXIntrinsics
 
