--- a/GenXIntrinsics/lib/CMakeLists.txt
+++ b/GenXIntrinsics/lib/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_compile_definitions(LLVM_VERSION_MAJOR=${LLVM_VERSION_MAJOR})
+add_definitions(-DVC_INTR_LLVM_VERSION_MAJOR=${LLVM_VERSION_MAJOR})
 
 add_subdirectory(GenXIntrinsics)
