Add -BSymbolic flag to libSPIRVDLL.so
Change-Id: If24651429d79b3848c50e821528c09800a7d3219
CI-Depends: If24651429d79b3848c50e821528c09800a7d3219

--- a/SPIRV-LLVM-Translator/lib/SPIRV/CMakeLists.txt
+++ b/SPIRV-LLVM-Translator/lib/SPIRV/CMakeLists.txt
@@ -68,6 +68,10 @@ add_llvm_library(SPIRVDLL SHARED
     intrinsics_gen
 )
 
+if(NOT WIN32)
+  target_link_options(SPIRVDLL PRIVATE -Bsymbolic)
+endif()
+
 target_include_directories(LLVMSPIRVLib
   PRIVATE
     ${LLVM_INCLUDE_DIRS}
