--- a/GenXIntrinsics/include/llvm/GenXIntrinsics/CMakeLists.txt
+++ b/GenXIntrinsics/include/llvm/GenXIntrinsics/CMakeLists.txt
@@ -1,3 +1,7 @@
+# __INTEL_EMBARGO_BEGIN__
+#   GenXSimdCFLowering.h
+# __INTEL_EMBARGO_END__
+
 add_custom_command(
     OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${GENX_INTRINSICS_DESCRIPTION}
     COMMAND ${PYTHON_EXECUTABLE} -B
