Fix OS intrinsics build. The problem appears when we build something outside llvm and include intrinsics headers.
VMIT-7740

Change-Id: I5c503bc934cf516150cc26cb691d780b587b107e

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,12 +37,9 @@ if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
 else(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
   set(BUILD_EXTERNAL NO)
 
-  #__INTEL_EMBARGO_BEGIN__
-  # this is not an open source part
-  # we require include_directories because we have dependency in SPIRV from intrinisics
+  # we require include_directories because other components may include intrinsics headers.
   include_directories(${CMAKE_CURRENT_SOURCE_DIR}/GenXIntrinsics/include)
   include_directories(${CMAKE_CURRENT_BINARY_DIR}/GenXIntrinsics/include)
-  #__INTEL_EMBARGO_END__
 endif(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
 
 include(FindPythonInterp)
