Fix link libraries for intrinsics unit test
LLVM_LINK_COMPONENTS is not handled correctly for intrinsics library.

Change-Id: I3afa0395d64b4255782cbff55505ce916d2a2be0
CI-Depends: I3afa0395d64b4255782cbff55505ce916d2a2be0

--- a/GenXIntrinsics/unittests/GenXIntrinsics/CMakeLists.txt
+++ b/GenXIntrinsics/unittests/GenXIntrinsics/CMakeLists.txt
@@ -2,11 +2,14 @@ set(LLVM_LINK_COMPONENTS
   Core
   Support
   CodeGen
-  GenXIntrinsics
   )
 
 add_genx_intrinsics_unittest(GenXIntrinsicsTests
   GenXIntrinsicsTest.cpp
   )
 
-target_link_libraries(GenXIntrinsicsTests PRIVATE LLVMTestingSupport)
+target_link_libraries(GenXIntrinsicsTests
+  PRIVATE
+  LLVMGenXIntrinsics
+  LLVMTestingSupport
+  )
