Add plugin for lit tests infrastructure
Add VCIntrinsicsPlugin for opt. This will allow to test intrinsics
passes on llvm ir tests. Working only with dylib LLVM because in other
configurations there can be a lot of problems.

Change-Id: I72a570234d4e74862cae9135953cfcbe4d5079b7
CI-Depends: I72a570234d4e74862cae9135953cfcbe4d5079b7

--- a/GenXIntrinsics/CMakeLists.txt
+++ b/GenXIntrinsics/CMakeLists.txt
@@ -19,6 +19,12 @@ if(NOT BUILD_EXTERNAL)
   add_subdirectory(unittests)
 endif()
 
+# Experimental lit tests for intrinsic passes. Require plugin support,
+# so only available with LLVM dylib (for stability).
+if(LLVM_LINK_LLVM_DYLIB)
+  add_subdirectory(test)
+endif()
+
 # this option is to switch on install when we are building not inside IGC
 if(INSTALL_REQUIRED)
   install(DIRECTORY include/llvm
