Add lit tests infrastructure
Add lit testing with dynamic LLVM configuration (both in-tree and
external). Use VC_INTR_ENABLE_LIT_TESTS cmake variable to control lit
tests. Add very simple test for spirv writer adaptor as example.

Change-Id: Ic3d207bbb6579043d41bf41273b42bb744662895
CI-Depends: Ic3d207bbb6579043d41bf41273b42bb744662895

--- a/GenXIntrinsics/CMakeLists.txt
+++ b/GenXIntrinsics/CMakeLists.txt
@@ -21,8 +21,13 @@ endif()
 
 # Experimental lit tests for intrinsic passes. Require plugin support,
 # so only available with LLVM dylib (for stability).
-if(LLVM_LINK_LLVM_DYLIB)
-  add_subdirectory(test)
+if(VC_INTR_ENABLE_LIT_TESTS)
+  if(LLVM_LINK_LLVM_DYLIB)
+    message(STATUS "VC intrinsics lit tests are enabled")
+    add_subdirectory(test)
+  else()
+    message(STATUS "VC intrinsics lit tests require dynamic LLVM, skipping")
+  endif()
 endif()
 
 # this option is to switch on install when we are building not inside IGC
