Add llvm version to test features
This allows to control availability of certain tests under
different versions of llvm.

Disable replicate_mask under llvm7

IR becomes corrupted when llvm 7 is used, problem seems
to be unrelated to mask replication feature.

Disable bitcast_between_wrrs under llvm7

Problem similar to other simd cf lowering test.

Change-Id: I20583902e4e2900f05fa9be2defc6b95fd44d72a
CI-Depends: I20583902e4e2900f05fa9be2defc6b95fd44d72a

--- a/GenXIntrinsics/test/lit.site.cfg.py.in
+++ b/GenXIntrinsics/test/lit.site.cfg.py.in
@@ -12,6 +12,7 @@ config.host_arch = "@HOST_ARCH@"
 config.python_executable = "@PYTHON_EXECUTABLE@"
 config.test_run_dir = "@CMAKE_CURRENT_BINARY_DIR@"
 config.vc_intrinsics_plugin = "$<TARGET_FILE:VCIntrinsicsPlugin>"
+config.llvm_version_major = "@LLVM_VERSION_MAJOR@"
 
 # Support substitution of the tools and libs dirs with user parameters. This is
 # used when we can't determine the tool dir at configuration time.
